Updated to AceLords Logo + SEO; Added previous_year_+_1

--- a/lang/en.json
+++ b/lang/en.json
@@ -186,6 +186,7 @@
     "previous_month": "Previous Month",
     "previous_quarter": "Previous Quarter",
     "previous_year": "Previous Year",
+    "previous_year_plus_one": "Previous Year + 1",
     "custom": "Custom"
   },
   "customers": {
@@ -1279,7 +1280,7 @@
       "title": "Update App",
       "description": "You can easily update InvoiceShelf by checking for a new update by clicking the button below",
       "check_update": "Check for updates",
-      "insider_consent" : "Opt-in for Insider releases. Recommended for testing purposes only.",
+      "insider_consent": "Opt-in for Insider releases. Recommended for testing purposes only.",
       "avail_update": "New Update available",
       "next_version": "Next version",
       "requirements": "Requirements",
@@ -1467,9 +1468,9 @@
       "failed": "Domain verification failed. Please enter valid domain name.",
       "verify_and_continue": "Verify And Continue",
       "notes": {
-        "notes" : "Notes:",
-        "not_contain" : "App domain should not contain",
-        "or" : "or",
+        "notes": "Notes:",
+        "not_contain": "App domain should not contain",
+        "or": "or",
         "in_front": "in front of the domain.",
         "if_you": "If you're accessing the website on a different port, please mention the port. For example:"
       }
