Added prev. year +2 & 3. Logo mods

--- a/lang/en.json
+++ b/lang/en.json
@@ -187,6 +187,8 @@
     "previous_quarter": "Previous Quarter",
     "previous_year": "Previous Year",
     "previous_year_plus_one": "Previous Year + 1",
+    "previous_year_plus_two": "Previous Year + 2",
+    "previous_year_plus_three": "Previous Year + 3",
     "custom": "Custom"
   },
   "customers": {
